@@ -1,5 +1,6 @@
 - NEW: new command line params for the log dialog to set the filter. (Stefan)
 - NEW: new autoclose setting for local operations only. (Stefan)
+- NEW: the log dialog turns references to revisions into links. (Stefan)
 
 Version 1.6.2
 - BUG: Error message about non-LF commit messages when using messages with
